# training-plan

./: .gitignore  .gitmodules  LICENSE  README.md  tags  关系型数据库.md  王昊龙实验.md
.github/: auto_assign.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report---.md  bug-report.md  feature-request------.md  feature-request.md  general-question---.md  general-question.md
SpringTerm-Week13-DataMining/: README.md
SpringTerm-Week14-DeepLearning/: README.md
SpringTerm-Week15-NLP/: README.md
SpringTerm-Week16-17-Percolator,SQL protoco/: README.md
SpringTerm-Week18-Select and Projection executor/: README.md
Week1-Database-Introduction/: 111.md  1111.md  11111.md  JanusgraphExperiment.md  MongoDBExperiment.md  MySQLExperiment.md  README.md  RedisExperiment.md  周帆Week1.md
Week1-Database-Introduction/DaoBingZhu-Week1/: ExperimentReport.md
Week1-Database-Introduction/DongChuangshi-Week1/: 董创轼实验报告.md
Week1-Database-Introduction/Example/: 周帆Week1.md  数据库系统.md  李明实验报告.md
Week1-Database-Introduction/RenJieWang-Week1/: 王仁杰-week1.md
Week1-Database-Introduction/fanqie实验报告/: fanqie.md
Week1-Database-Introduction/gongkaiweek1/: 龚凯试验报告.md
Week1-Database-Introduction/homework/: Redis基础知识和实验过程_陈思芹.md  Redis实验过程.md  janusgraph.md  mongodb.md  mysql.md  redis.md  图数据库.md  数据库系统基础-Group.md
Week1-Database-Introduction/任勇闯-Week1/: 任勇闯实验报告.md
Week1-Database-Introduction/周帆week1/: 周帆Week1.md
Week1-Database-Introduction/王俊的实验报告/: wangjun.md
Week10-12-SQL-Engine-&-Parser/: README.md  executor实现和问题总结汇总.md
Week10_11-Executor/: README.md
Week10_11-Executor/DaoBingZhu-Week10_11-Executor/: README.md
Week10_11-Executor/homework/: README.md
Week12-Data Mining/: README.md
Week12-DataMining/: README.md
Week12_13-Distributed-System/: README.md
Week12_13-Distributed-System/DaoBingZhu-Week12_13-Distributed-System/: README.md
Week13-15-Concurrency-Control/: README.md
Week13-DeepLearning/: README.md
Week13-NLP/: README.md
Week14-CV/: README.md
Week14-Consistency/: README.md
Week14-NLP/: README.md
Week15-Distributed-Database/: README.md
Week15-TinyKV-Standalone KV/: StandaloneKV.md
Week16-Distributed-System/: README.md
Week17-20-Consistency/: README.md
Week17-TinyKV Raft KV 2B/: 2b.md
Week18-TinyKV Raft KV 2C/: project2c.md
Week2-Data-Structure-I/: README.md  Week2 Data Structures I.md  bloom cuckoo.md
Week2-Data-Structure-I/HouLei/: Bloom&Cuckoo_filter.md
Week2-Data-Structure-I/ZhengQianYi/: README.md
Week2-Data-Structure-I/bloom/: 1  BloomFilter.h  bitmap.h  bloom fliter.cpp
Week2-Data-Structure-I/chensiqin/: 过滤器性能测试.md
Week2-Data-Structure-I/cuckoo/: cuckoo fliter.cpp
Week2-Data-Structure-I/cuckoo-filter/: bucket.go
Week2-Data-Structure-I/filter/: CMakeLists.txt
Week2-Data-Structure-I/hashs/: hashs.cpp
Week2-Data-Structure-I/homework/: Bloom&Cuckoo_filter.md
Week2-Data-Structure-I/hqz/week2-bloom/: CMakeLists.txt  performence_test.md  readme.md  unit_test.md
Week2-Data-Structure-I/hqz/week2-bloom/include/: bitmap.h  bloomfilter.h
Week2-Data-Structure-I/hqz/week2-bloom/src/: CMakeLists.txt  bitmap.cc  bloomfilter.cc
Week2-Data-Structure-I/hqz/week2-bloom/test/: BitmapTest.cc  BloomfilterTest.cc  CMakeLists.txt  performTest.cc
Week2-Data-Structure-I/hqz/week2-cuckoo/: CMakeLists.txt  README.md  performence_test.md  unit_test.md
Week2-Data-Structure-I/hqz/week2-cuckoo/include/: bucket.h  cuckoo.h  md5.h
Week2-Data-Structure-I/hqz/week2-cuckoo/src/: CMakeLists.txt  bucket.cc  cuckoo.cc  md5.cc
Week2-Data-Structure-I/hqz/week2-cuckoo/test/: BucketTest.cc  CMakeLists.txt  CuckooTest.cc  performTest.cc
Week2-Data-Structure-I/shiweiwei/: 实验报告.md
Week2-Data-Structure-I/tangyiheng/: 性能测试.md  设计文档.md
Week2-Data-Structure-I/test/: randString1_1000.txt  randString_10000.txt
Week2-Data-Structure-I/ztywork/: 单元测试.md  性能测试.md  设计文档.md
Week2-DataStructure/SkipList-Java/: LICENSE  README.md
Week2-Query Optimization/: README.md
Week22-TinySQL Simple explanation of SQL and relational algebra/: table_codec.md
Week23-TinySQL Optimizer Part2/: .gitkeep
Week28-DataMining/: README.md
Week29-DeepLearning/: README.md
Week2_3-Data-Structure-I/: .gitignore  Main.java  README.md  SkipList.java  SkipListMapTest.java
Week2_3-Data-Structure-I/RenYongChuang-Week2/: dataStructure_Study.md  pom.xml
Week2_3-Data-Structure-I/cpp-skiplist-template/: .gitignore  README.md
Week2_3-Data-Structure-I/go-skiplist-template/: skiplist.go
Week2_3-Data-Structure-I/templates/cpp-skiplist-template/: .travis.yml  CMakeLists.txt
Week2_3-Data-Structure-I/templates/cpp-skiplist-template/dscl/: skiplist.h  skiplist_test.cc
Week2_3-Data-Structure-I/templates/cpp-skiplist-template/util/: random.h
Week3-Relation Database-I/: README.md  数据库基础概念学习笔记.md
Week30-NLP/: README.md
Week4-5-Buffer Pool/: README.md  buffer_pool_manager.cpp  buffer_pool_manager.h  lru_replacer.cpp  lru_replacer.h  缓冲池知识梳理.md
Week4-5-Buffer Pool/HouLei/: bufferpool_hl.md
Week4-5-Buffer Pool/ZhengQianyi/: README.md  Week 5 -ZQY.md
Week4-5-Buffer Pool/huangqizhi/: Week4-5 Buffer Pool.md
Week4-5-Buffer Pool/include/: buffer_pool_manager.h  lru_replacer.h
Week4-5-Buffer Pool/shiweiwei/: 代码实现.md  测试说明.md  缓冲池理论整理.md
Week4-5-Buffer Pool/src/: buffer_pool_manager.cpp  lru_replacer.cpp
Week4-5-Buffer Pool/tangyiheng/: 实现过程.md  测试结果.md  (+1 more)
Week4-Data-Structure-II/: BloomFilterEnhance.java  CuckooFilter.java  README.md
Week4-Data-Structure-II/homework/DaobingZhu/: .gitignore  CMakeLists.txt  README.md
Week4-Data-Structure-II/homework/DaobingZhu/dscl/: bloom.cc  bloom_test.cc  filter_policy.h
Week4-Data-Structure-II/homework/DaobingZhu/util/: coding.cc  coding.h  hash.h  hash_test.cc  slice.h
Week5-CMU-Buffer Pool/: Buffer Pool.md
Week5_6-Tech-of-Database/: README.md
Week6-7-CMU-Hash Table Index/: Hash Table Index-1.md  Hash Table Index-2.md
Week6-8-Data-Structure-II/: README.md
Week7-SQL-Engine-&-Parser/: README.md
Week8-9-CMU-Execution/: Execution1.md  Execution2.md
Week8_9-SQL-Optimizer/: README.md
Week9-Data-Structure-III/: README.md
(+399 files in other folders)
