find_package(Catch2 3 REQUIRED)
include_directories(${CMAKE_SOURCE_DIR}/include)
set(TEST BitmapTest.cc BloomfilterTest.cc)
add_executable(utest ${TEST})
add_dependencies(utest bloom)
target_link_libraries(utest PRIVATE bloom Catch2::Catch2WithMain)
add_executable(perform performTest.cc)
add_dependencies(perform bloom)
target_link_libraries(perform PRIVATE bloom)