find_package(Catch2 3 REQUIRED)
include_directories(${CMAKE_SOURCE_DIR}/include)
set(TEST BucketTest.cc CuckooTest.cc)
add_executable(utest ${TEST})
add_dependencies(utest cuckoo)
target_link_libraries(utest PRIVATE cuckoo Catch2::Catch2WithMain)
add_executable(perform performTest.cc)
add_dependencies(perform cuckoo)
target_link_libraries(perform PRIVATE cuckoo)